--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@ body {
     background-color: aqua;
     margin-left: 100px;
 }
+
+h2 {
+    font-style: oblique;
+}
+
+h1 {
+    font-size: 50px;
+}
