--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,29 @@
 body {
-    background-color: rgb(4, 4, 4);
-    margin-left: 100px;
+    background-color: rgb(35, 32, 32);
+    margin-left: 10px;
 }
 
 h2 {
     font-style: oblique;
+    display: inline-block;
+    
 }
+
+h2:hover {
+    color: pink;
+    transition-duration: 0ms;
+}
+
 
 h1 {
     font-size: 50px;
+    display: inline-block;
 }
 
+h1:hover {
+      color: pink;
+      transition-duration: 0ms;
+}
 
 #pic1 {
     width: 400px;
